<resources>
    <string name="app_name">weather-avito</string>
    <string name="w_degree">%d°C</string>
    <string name="w_location">Tap to choose location</string>
    <string name="str_val">%s</string>
    <string name="w_pressure">%d hPa</string>
    <string name="w_wind_v">%d m/s</string>
    <string name="str_wind">WIND</string>
    <string name="str_humidity">HUMIDITY</string>
    <string name="str_pressure">PRESSURE</string>
    <string name="str_sunrise">SUNRISE</string>
    <string name="str_sunset">SUNSET</string>
    <string name="str_pop">PROBABILITY OF PRECIPITATION</string>
    <string name="week_forecast">WEEK FORECAST</string>
    <string name="str_help1">Or tap</string>
    <string name="str_hint">Enter the location</string>
    <string name="str_help2">to get weather in location</string>
</resources>