<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        tools:context=".views.WeatherFragment">

        <TextView
            android:id="@+id/w_degrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/w_degree"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/p_gl"
            app:layout_constraintEnd_toEndOf="@id/r_gl"
            app:layout_constraintStart_toStartOf="@id/l_gl"
            app:layout_constraintTop_toTopOf="@id/p_gl" />

        <TextView
            android:id="@+id/w_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_val"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/w_degrees"
            app:layout_constraintStart_toStartOf="@id/w_degrees"
            app:layout_constraintTop_toBottomOf="@id/w_degrees" />

        <TextView
            android:id="@+id/w_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/str_val"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/r_gl"
            app:layout_constraintStart_toStartOf="@id/l_gl"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/w_location"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/w_time"
            app:layout_constraintStart_toStartOf="@id/w_time"
            app:layout_constraintTop_toBottomOf="@id/w_time"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Headers-->
        <TextView
            android:id="@+id/w_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/str_wind"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/l_gl"
            app:layout_constraintTop_toBottomOf="@id/vv_2_3" />

        <TextView
            android:id="@+id/w_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/str_humidity"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/l_gl"
            app:layout_constraintTop_toBottomOf="@id/vv_1_5" />

        <TextView
            android:id="@+id/w_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/str_pressure"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/h_gl"
            app:layout_constraintTop_toBottomOf="@id/vv_2_3" />

        <TextView
            android:id="@+id/w_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_sunrise"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/l_gl"
            app:layout_constraintTop_toBottomOf="@id/vv_upper" />

        <TextView
            android:id="@+id/w_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_sunset"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/h_gl"
            app:layout_constraintTop_toBottomOf="@id/vv_upper" />

        <TextView
            android:id="@+id/w_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/str_pop"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/h_gl"
            app:layout_constraintTop_toBottomOf="@id/vv_1_5" />

        <View
            android:id="@+id/vv_1_5"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/line_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/w4_info" />

        <View
            android:id="@+id/vv_2_3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/line_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/w_2_info" />

        <View
            android:id="@+id/vv_upper"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/line_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_forecast" />
        <!--/Headers-->

        <TextView
            android:id="@+id/w_1_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_wind_v"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/w_1"
            app:layout_constraintTop_toBottomOf="@id/w_1" />

        <TextView
            android:id="@+id/w_2_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_val"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/w_2"
            app:layout_constraintTop_toBottomOf="@id/w_2" />

        <TextView
            android:id="@+id/w3_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_pressure"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/w_3"
            app:layout_constraintTop_toBottomOf="@id/w_3" />

        <TextView
            android:id="@+id/w4_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_val"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/w_4"
            app:layout_constraintTop_toBottomOf="@id/w_4" />


        <TextView
            android:id="@+id/w5_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_val"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/w_5"
            app:layout_constraintTop_toBottomOf="@id/w_5" />

        <TextView
            android:id="@+id/w_6_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_val"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/w_6"
            app:layout_constraintTop_toBottomOf="@id/w_6" />

        <Button
            android:id="@+id/w_curr_pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/l_gl"
            app:layout_constraintTop_toBottomOf="@id/w_degrees" />

        <TextView
            android:id="@+id/header_rv_forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/week_forecast"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/w_description" />

        <ImageView
            android:id="@+id/blind"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_forecast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="@id/r_gl"
            app:layout_constraintStart_toStartOf="@id/l_gl"
            app:layout_constraintTop_toBottomOf="@id/header_rv_forecast" />

        <TextView
            android:id="@+id/help1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/str_help1"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@id/imageLoc"
            app:layout_constraintEnd_toEndOf="@id/imageLoc"
            app:layout_constraintStart_toStartOf="@id/imageLoc" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_search_loc"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:hint="@string/str_hint"
            android:textColor="@color/white"
            app:endIconDrawable="@drawable/search_24"
            app:endIconMode="custom"
            app:layout_constraintBottom_toBottomOf="@id/w_location"
            app:layout_constraintEnd_toStartOf="@id/r_gl"
            app:layout_constraintStart_toEndOf="@id/l_gl"
            app:layout_constraintTop_toBottomOf="@id/imageLoc"
            app:layout_goneMarginTop="100dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageLoc"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/geopos"
            app:layout_constraintEnd_toEndOf="@id/r_gl"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/help2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/str_help2"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@id/imageLoc"
            app:layout_constraintStart_toStartOf="@id/imageLoc"
            app:layout_constraintTop_toBottomOf="@id/imageLoc" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/l_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/h_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/p_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.18" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/r_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
